<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_name"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@android:color/background_light" />


        <Button
            android:id="@+id/btnPlayEasy"
            style="@style/allBtnStyle"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/easy"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnPlayMedium"
            style="@style/allBtnStyle"
            android:layout_marginBottom="10dp"
            android:text="@string/medium"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnPlayHard"
            style="@style/allBtnStyle"
            android:layout_marginBottom="70dp"
            android:text="@string/hard"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>