<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1dp"
    android:background="@color/backgroundRV"
    android:orientation="horizontal"
    android:padding="16dp">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/userNameRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="#FFFF"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/modRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod"
            android:textColor="#D5FFFF"
            android:textSize="20sp" />

    </LinearLayout>


    <TextView
        android:id="@+id/pointRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/point"
        android:textColor="#FFD5DD"
        android:textSize="40sp" />


</LinearLayout>