<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:shadowColor="#000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/number"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/background_light" />

            <TextView
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:shadowColor="#000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/loading"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/background_light"
                android:textSize="25sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnAnswer0"
                    style="@style/allBtnStyle"
                    android:text="@string/noClick"

                    />

                <Button
                    android:id="@+id/btnAnswer1"
                    style="@style/allBtnStyle"
                    android:text="@string/noClick" />


                <Button
                    android:id="@+id/btnAnswer2"
                    style="@style/allBtnStyle"
                    android:text="@string/noClick" />

                <Button
                    android:id="@+id/btnAnswer3"
                    style="@style/allBtnStyle"
                    android:text="@string/noClick" />

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</FrameLayout>